compiler_testing_lib/syntax/v2.2/ebnf-go.txt
PROGRAM = { STATEMENT } ;
BLOCK = "{", "\n", { STATEMENT }, "}" ;
STATEMENT = (("if", BOOLEXPRESSION, BLOCK, (("else", BLOCK) | ε)) | ("for", BOOLEXPRESSION, BLOCK) | (IDENTIFIER, "=", BOOLEXPRESSION) | ("Println", "(", BOOLEXPRESSION, ")") | VARDEC | BLOCK | ε), "\n" ;
VARDEC = "var", IDENTIFIER, TYPE, (("=", BOOLEXPRESSION) | ε) ;
BOOLEXPRESSION = BOOLTERM, { "||", BOOLTERM } ;
BOOLTERM = RELEXPRESSION, { "&&", RELEXPRESSION } ;
RELEXPRESSION = EXPRESSION, { ("==" | "<" | ">"), EXPRESSION } ;
EXPRESSION = TERM, { ("+" | "-"), TERM } ;
TERM = FACTOR, { ("*" | "/"), FACTOR } ;
FACTOR = ("+" | "-" | "!"), FACTOR | "(", BOOLEXPRESSION, ")" | NUMBER | IDENTIFIER | "Scanln", "(", ")" | STRING | BOOLEAN ;
TYPE = "int" | "string" | "bool" ;
BOOLEAN = "true" | "false" ;
STRING = '"', { LETTER | DIGIT | " " }, '"' ;
NUMBER = DIGIT, {DIGIT} ;
DIGIT = 0 | 1 | ... | 9 ;
IDENTIFIER = LETTER, {LETTER | DIGIT | "_"} ;
LETTER = a | b | ... | z | A | B | ... | Z ;
